--- a/index.html
+++ b/index.html
@@ -67,13 +67,9 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        I’m a passionate machine learning researcher and software developer,
-        currently preparing for my Research on Interpretability in Finance and Medicine with a focus on Machine Learning and
-        Cybersecurity. My work explores interpretable ML models for healthcare
-        and fraud detection. As an adjunct faculty member, I love inspiring
-        students with the possibilities of AI. When I’m not coding or
-        researching, you might find me diving into Peaky Blinders or writing
-        tech tutorials on Medium.
+       Proficient in adept communication possessing the ability to convey ideas clearly and effectively across diverse 
+       audiences. Quick and enthusiastic learner, with a proven track record of rapidly assimilating new concepts and 
+       skills, enhancing adaptability, and contributing to seamless transitions in dynamic work environments.
       </p>
     </div>
   </section>
@@ -97,8 +93,8 @@
       <div class="edu-item">
         <h3>Master of Computer &amp; Information Sciences</h3>
         <p>
-          Saint Louis University, MO &bull; Aug 2022 – May 2024<br />
-          GPA: 3.93 / 4.00
+          Saint Louis University, MO &bull; Aug 2023 – May 2025<br />
+          GPA: 3.95 / 4.00
         </p>
       </div>
     </div>
@@ -147,17 +143,17 @@
     <div class="container">
       <h2>Professional Experience</h2>
       <div class="exp-item">
-        <h3>Machine Learning Engineer · EliteNotes</h3>
-        <span class="date">Jun 2023 – Present</span>
+        <h3>Junior Software Developer</h3>
+        <span class="date">Jun 2022 – april 2023</span>
         <ul>
           <li>
-            Built a Python‑based transcription system with 95% accuracy,
-            integrating multilingual translation (98% accuracy) for 10,000+ files/day
-            using React.js and Node.js.
+            Distinguished myself as a junior software developer within a dynamic start-up ecosystem, 
+            orchestrating successful project completion while simultaneously guiding a cohesive team at 
+            “KGN-HR Solution” in Andhra Pradesh.
           </li>
           <li>
-            Optimized data preprocessing, reducing processing time by 50% and boosting
-            real‑time transcription efficiency.
+            And proficiently participated in quality control initiatives, providing invaluable assistance to 
+            senior team members.
           </li>
         </ul>
       </div>
